--- a/ressources/backup_skin.css
+++ b/ressources/backup_skin.css
@@ -1,1 +1,489 @@
+@import url("https://cdn.jsdelivr.net/gh/JamsRepos/Jamfin@latest/theme/base.css");
 
+@import url("https://cdn.jsdelivr.net/gh/Druidblack/jellyfin-icon-metadata@main/public-icon.css");
+
+:root {
+    /* Colours */
+    --theme-background-colour: #101010;
+    --theme-sidebar-background-colour: #121212;
+    --theme-menu-background-colour: #3a3a3a80;
+    --theme-menu-shadow-colour: #fff3;
+    --theme-base-colour: #696969;
+    --theme--hover-colour: ##d21a61;
+    --theme-restart-colour: #d21a6182;
+    --theme-shutdown-colour: #c21c1c9d;
+    --theme-progress-bar-colour: #d21a61;
+    --theme-progress-bar-background-colour: #2c2c2c;
+    --theme-progress-bar-transcoding-colour: #e94383;
+ 
+    /* General Appearance */
+    --theme-roundness: 0.95rem;
+    --theme-blur: 16px;
+
+    scrollbar-width: none;
+    overscroll-behavior: contain;
+}  
+
+.ContinueWatching > .padded-top-focusscale.padded-bottom-focusscale.emby-scroller {
+
+}
+
+/* Posterizarr 16/9 fix */
+#itemDetailPage .listItemImage-large {
+  width: 16vw;
+  height: 9vw;
+}
+
+
+#pause-screen-backdrop { display: none; }
+#pause-screen-content { backdrop-filter: none; }
+#pause-screen-overlay { background: rgb(0 0 0 / 25%); }
+#pause-screen-plot{
+  backdrop-filter: blur(2px) saturate(0.9)!important;
+  box-shadow: 0px 0px 7px rgb(0 0 0 / 80%)!important;
+  height: auto !important;
+}
+.verticalSection.emby-scroller {
+  padding-left: 8px !important;
+  margin-left: 0px !important;
+}
+
+/* Item page button hiding */
+
+/*
+.watchlist-icon.detailButton.emby-button.button-flat {
+    height: -webkit-fill-available;
+}
+
+
+.button-flat.btnPlayTrailer.detailButton.emby-button {
+    display: none;
+}
+
+*/
+
+.button-flat.btnShuffle.detailButton.emby-button {
+    display: none;
+}
+
+/* */
+
+.headerButtonRight {
+  background-color: transparent; !important;
+  box-shadow: none !important;
+  backdrop-filter: none !important;
+}  
+
+.cardOverlayContainer {
+  background: rgba(236,215,215,0.1);
+}
+
+h2.sectionTitle.sectionTitle-cards{ 
+  text-transform: capitalize !important; 
+  font-size: 2.4em !important;
+  letter-spacing: 0.3em !important;
+} 
+
+#txtCustomCss.emby-textarea {
+  overflow-y: scroll !important;
+  height: 50em !important;
+}
+
+.paper-icon-button-light.itemAction.cardOverlayButton {
+  display: none !important;
+}
+
+/*
+.overflowBackdropCard .cardBox{
+  width: 11.8em !important;
+} 
+*/
+.detailImageContainer .card .cardBox {
+    margin: 0;
+    width: auto !important;
+}
+.layout-desktop .detailImageContainer .card {
+  width: 100% !important;
+  aspect-ratio: 2 / 3;
+  overflow: hidden;
+  max-width: 25em !important;
+  margin-top: -7.2em!important;
+  top: 8.8em !important;
+  left:0px !important;
+}
+
+/* Item Detail Page Customizations */
+
+.itemDetailPage.libraryPage {
+  padding-top: 7em !important;
+}
+
+.layout-desktop .detailPagePrimaryContent {
+    grid-area: description;
+    padding-left: 0px !important;
+    padding-top: 100px !important;
+}
+
+
+.layout-desktop .mainDetailButtons {
+  margin-top: 0px !important;
+  margin-left: 0px !important;
+}
+
+.layout-desktop .infoWrapper {
+  padding-top: 0px !important;
+  padding-left: 0px !important;
+}
+
+.layout-desktop .detailRibbon {
+  margin-top: 0px !important;
+}
+
+.itemBackdrop::before{
+  background: none;
+}
+h1.itemName.infoText.parentNameLast {
+  font-size: 3.8em !important;
+  -webkit-text-stroke: thin !important;
+  -webkit-text-stroke-color: #ffffff29 !important;
+}
+
+.layout-desktop [dir=ltr] .detailRibbon {
+  padding-left: 0px !important;
+  display: block !important;
+}
+
+.layout-desktop .detailSection {
+  margin-top: -50px;
+}
+
+.detailPageSecondaryContainer {
+  background-color: rgb(23 23 23) !important;
+  border: 0.1em solid rgb(23 23 23 / 0%);
+  margin-top: -8px !important;
+  padding-bottom: calc(env(safe-area-inset-bottom) + 2em) !important;
+}
+
+.detailPagePrimaryContainer {
+  background-color: #9aa5a51a !important;
+  background: linear-gradient(180deg, rgb(23 23 23 / 20%) -2%, rgb(23 23 23));
+  box-shadow: inset 0 1px var(--theme-menu-shadow-colour);
+  backdrop-filter: blur(3.2px) saturate(75%) hue-rotate(-10deg) !important;
+}
+
+.layout-desktop .detailPagePrimaryContainer {
+  border: 0.1em solid rgb(21 21 21 / 0%);
+  grid-template-areas: 
+    "cover title" 
+    ". description";
+  display: grid;
+  grid-template-columns: 35% 1fr;
+  grid-template-rows: 15ch 1fr;
+  grid-gap: 1rem;
+  align-items: stretch;
+  justify-content: space-between;
+  justify-items: stretch;
+}
+
+.layout-desktop .detailImageContainer.hide-mobile {
+    grid-area: cover;
+}
+
+.backdropImage {
+  filter: blur(0px) !important;
+}
+
+.detailSectionContent p,
+.detailSectionContent h3,
+.detailSectionContent label,
+.detailSectionContent #text,
+.itemDetailsGroup p,
+.nameContainer,
+.itemMiscInfo,
+.trackSelections,
+.itemTags,
+.label.selectLabel,
+.genresLabel.label,
+.studiosLabel.label
+{
+  color: white !important;
+  text-shadow: 1px 1px 1px #000000ad;
+}
+
+.detailTrackSelect,
+.buttonLink
+{
+  color: # ececec !important;
+  text-shadow: 1px 1px 1px #000000ad !important;
+}
+
+/* Card and Button styling */
+
+.favorite-button, 
+.detailButton,
+.cardOverlayButton:not(.itemAction),
+.paper-icon-button-light:not(.headerRight, headerButtonRight, .headerRight .paper-icon-button-light, .cardOverlayButton .itemAction),
+.headerButton:not(.headerButtonRight),
+.headerButtonLeft,
+.headerRight,
+.headerTabs {
+  background-color: rgba(21, 21, 21, 0.33); !important;
+  box-shadow: inset 0 1px var(--theme-menu-shadow-colour);
+  backdrop-filter: blur(2.6px) saturate(90%) hue-rotate(-10deg) !important;
+  border: --theme-roundness solid rgba(21, 21, 21, 0.43);
+}
+
+.detailButton {
+  left: -0.5em !important;
+}
+
+.mainDrawer {
+  transform: translateX(-1000px);
+}
+
+.mainDrawer,
+.MuiPaper-root {
+  background: rgba(0, 0, 0, 0.15);
+  backdrop-filter: blur(2px) saturate(180%);
+  border-radius: 2rem;
+  padding: 0.25rem;
+  box-shadow: inset -2px 2px 7px -2px rgba(255, 255, 255, 0.50), inset -2px -2px 2px 1px rgba(255, 255, 255, 0.15);
+/*
+  background-color: rgba(21, 21, 21, 0.43); !important;
+  box-shadow: inset 0 1px var(--theme-menu-shadow-colour);
+  backdrop-filter: blur(3.3px) saturate(80%) hue-rotate(-10deg) !important;
+  border: --theme-roundness solid rgba(21, 21, 21, 0.43);
+*/
+}
+
+.scrollContainer,
+.MuiDrawer-root {
+  scrollbar-width: none;
+  overscroll-behavior: contain;
+}
+
+.mainDrawer::after,
+.MuiDrawer-root::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.1);
+  border-radius: 2rem;
+  backdrop-filter: blur(1px);
+  box-shadow: inset -10px -8px 0px -11px rgba(255, 255, 255, 1),
+    inset 0px -9px 0px -8px rgba(255, 255, 255, 1);
+  opacity: 0.6;
+  z-index: -1;
+  filter: blur(1px) drop-shadow(10px 4px 6px black) brightness(115%);
+  pointer-events: none;
+}
+
+/* jura-regular - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Jura';
+  font-style: normal;
+  font-weight: 600;
+  src: url('/web/fonts/jura-v33-latin-regular.eot'); /* IE9 Compat Modes */
+  src: url('/web/fonts/jura-v33-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/web/fonts/jura-v33-latin-regular.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+       url('/web/fonts/jura-v33-latin-regular.woff') format('woff'), /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+, iOS 5+ */
+       url('/web/fonts/jura-v33-latin-regular.ttf') format('truetype'), /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+}
+html { font-family: "Jura" !important;}
+
+/* Slim Episode Format */
+.listItemImage.listItemImage-large.itemAction.lazy {
+  height: 110px;
+}
+.listItem-content {
+  height: 115px;
+}
+.secondary.listItem-overview.listItemBodyText {
+  height: 61px;
+  margin: 0;
+}
+.secondary.listItem-overview.listItemBodyText{
+  text-overflow: ellipsis !important;
+  white-space: normal  !important;
+  overflow: clip  !important;
+  line-height: 1.5em !important;
+}
+
+.layout-desktop .headerTabs {
+    margin-right: 200px !important;
+    margin-left: none !important;
+}
+
+
+
+a.raised.emby-button {
+  padding: 0.9em 1em;
+  color: inherit !important;
+}
+
+.disclaimerContainer {
+  display: block;
+}
+
+/*
+    This module will change the Jellyfin logo to a custom one.
+    This allows you to white-label your Jellyfin instance slightly.
+    This can be used as a standalone module.
+*/
+
+:root {
+    --logo-url: url('https://i.ibb.co/JWz37Gxf/Recent-Image.png');
+}
+
+.pageTitleWithDefaultLogo,
+.spashLogo {
+    display: none !important;
+}
+
+/*
+    This module change the color of the count indicators.
+    This is a simple and effective way to make your Jellyfin instance look more modern.
+    This can be used as a standalone module.
+*/
+
+:root {
+    --show-count-indicators: flex; /* none to hide */
+    --count-indicator-colour: rgba( 111, 111, 111, 0.2);
+    --played-indicator-colour: rgba(188, 5, 13, 0.5);
+}
+
+.countIndicator {
+    display: var(--show-count-indicators);
+}
+
+.countIndicator,
+.fullSyncIndicator,
+.mediaSourceIndicator,
+.playedIndicator {
+    background: var(--count-indicator-colour);
+}
+
+.playedIndicator {
+    background: var(--played-indicator-colour);
+}
+
+/*
+    This module will change "My Media (small)" to be centered on the homepage.
+    This is useful to make the homepage look more balanced.
+    This can be used as a standalone module.
+*/
+
+#indexPage .section0 .itemsContainer.padded-left.padded-right {
+    justify-content: center !important;
+    padding-top: 15px !important;
+}
+
+/*
+    This module will remove the "Forgot Password" button from the login page.
+    This is useful if you have a third-party user management system.
+    This can be used as a standalone module.
+
+
+#btnResetPassword,
+.btnForgotPassword {
+   display: none !important;
+}
+
+#loginPage {
+    max-height: 450px;
+}
+*/
+
+/*
+    This module will hide the "My Media" section from the Jellyfin homepage.
+    This is useful if you want an even more minimalistic homepage.
+    This can be used as a standalone module.
+
+
+#indexPage .section0 .sectionTitle {
+    display: none;
+}
+
+
+
+#indexPage .section0 {
+    padding-top: 1em;
+}
+*/
+
+#indexPage .verticalSection.section0 {
+    padding-top: 3em;
+}
+
+/*
+    This module will make your Jellyfin cards lift up slightly when hovered over.
+    This is a simple and effective way to make your Jellyfin instance look more modern.
+    This can be used as a standalone module.
+*/
+
+.cardBox:hover {
+    transform: translateY(-3.5px);
+    transform: scaleX(1.05%);
+    transform: scaleY(1.1%);
+    -webkit-transform: translateY(-3.5px);
+    -moz-transform: translateY(-3.5px);
+    -ms-transform: translateY(-3.5px);
+    -o-transform: translateY(-3.5px);
+}
+
+/* 
+.layout-mobile .headerTabs{
+    display: none !important;
+}
+*/
+
+/* Jellyfin Mobile Tweaks */
+@media all and (max-width: 60em) { /* idk this value might vary based on screen size and dpi */
+    .section0 .cardBox {
+        width: 7em;
+    }
+
+    .skinHeader {
+        background: linear-gradient(#101010, transparent) !important;
+    }
+
+    .verticalSection .emby-scroller {
+        margin-left: 0px !important;
+        padding-left: 8px !important;
+        margin-right: unset;
+    }
+
+    .verticalSection .sectionTitle-cards.padded-left {
+        padding-left: 8px !important;
+        font-size: 1.1em;
+    }
+
+    .verticalSection .sectionTitleContainer-cards.padded-left {
+        padding-left: 8px !important;
+        font-size: 0.7em;
+    }
+
+    #itemDetailPage .detailPageWrapperContainer {
+        margin-top: 0;
+    }
+
+    .card {
+        width: initial !important;
+    }
+
+    .cardBox {
+        width: 7.4em;
+    }
+
+    #indexPage .cardBox {
+        width: 8.3em;
+    }
+
+    .itemsContainer > .card > .cardBox {
+        margin-right: 0.5em;
+    }
+}
